--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ aiohttp==3.7.4.post0
 alabaster==0.7.8
 appdirs==1.4.3
 apsw
-apt-clone==0.2.1
-apturl==0.5.2
-astroid==2.3.3
+apt-clone
+apturl
+astroid
 async-timeout==3.0.1
 attrs==19.3.0
 autopep8==1.5.7
